--- a/CS525/web_fullstack/frontend/src/index.jade
+++ b/CS525/web_fullstack/frontend/src/index.jade
@@ -1,8 +1,17 @@
 html
     head
         title Test
-        link(rel='stylesheet', type='text/css', href='styles/test.css')
+        link(rel='stylesheet', type='text/css', href='styles/vendor.css')
+        link(rel='stylesheet', type='text/css', href='styles/main.css')
     body
-        p This is a test
-        script(src='vendor/socket.io.js')
-        script(src='main.js')
+        .row
+            #one.col-md-4
+                p This is a test
+            #two.col-md-4
+                p This is a test
+            #three.col-md-4
+                p This is a test
+        #map
+        script(src='scripts/vendor.js')
+        script(src='scripts/main.js')
+        //script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyD-JTiPLlLf1-GyN5WD4zHKmWFlDQDk8wE&callback=initMap')
