CS525: integrate typescript and angular2

--- a/CS525/web_fullstack/frontend/src/index.jade
+++ b/CS525/web_fullstack/frontend/src/index.jade
@@ -12,6 +12,7 @@ html
             #three.col-md-4
                 p This is a test
         #map
+        my-app
         script(src='scripts/vendor.js')
-        script(src='scripts/main.js')
+        script(src='scripts/app.js')
         //script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyD-JTiPLlLf1-GyN5WD4zHKmWFlDQDk8wE&callback=initMap')
