--- a/CS525/web_fullstack/frontend/src/styles/main.scss
+++ b/CS525/web_fullstack/frontend/src/styles/main.scss
@@ -1,11 +1,4 @@
-#one {
-  background-color: red;
-}
-
-#two {
-  background-color: blue;
-}
-
-#three {
-  background-color: yellow;
+#map {
+  height: 650px;
+  width: 1050px;
 }
