--- a/CS525/web_fullstack/frontend/src/index.jade
+++ b/CS525/web_fullstack/frontend/src/index.jade
@@ -5,11 +5,11 @@ html
         link(rel='stylesheet', type='text/css', href='styles/main.css')
     body
         .row
-            .col-md-1
-            .col-md-10
+            .col-md-2
+                h3 Global Rank
+                global-rank
+            .col-md-10.center-block
                 #map.center-block
-            .col-md-1
-        my-app
         script(src='scripts/vendor.js')
         script(src='scripts/app.js')
         script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyD-JTiPLlLf1-GyN5WD4zHKmWFlDQDk8wE&callback=initMap')
