CS525: add local ranking

--- a/CS525/web_fullstack/frontend/src/index.pug
+++ b/CS525/web_fullstack/frontend/src/index.pug
@@ -8,6 +8,8 @@ html
             .col-md-2
                 h3 Global Rank
                 global-rank
+                h3 Local Rank
+                ol#local-rank
             .col-md-10.center-block
                 #map.center-block
         script(src='scripts/vendor.js')
