CS525: integrate with the redis cluster

--- a/CS525/web_fullstack/frontend/src/index.pug
+++ b/CS525/web_fullstack/frontend/src/index.pug
@@ -5,7 +5,7 @@ html
         link(rel='stylesheet', type='text/css', href='styles/main.css')
     body
         .row
-            .col-md-2
+            .col-md-2(style='padding-left: 40px;')
                 h3 Global Rank
                 global-rank
                 h3 Local Rank
